syntax = "proto3";
package proto;

import "google/protobuf/empty.proto";

message Request {
    int64 a = 1;
    int64 b = 2;
}

message Response{
    int64 result = 1;
}

message UserRequest{
    int64 id = 3;
    string email = 1;
    int64 password = 2;
}
message UserResponse{
    string email = 1;
    int64 password = 2;
}
message UserStringResponse{
    string response = 1;
}

message UserListResponse{
    repeated UserRequest users = 1;
}
service AddService {
    rpc Add(Request) returns (Response) ;
    rpc Multiply(Request) returns (Response) ;
}

service UserCrudService{
    rpc GetUsers(google.protobuf.Empty) returns (UserListResponse);
    rpc GetUser(UserRequest) returns (UserResponse);
    rpc AddUser(UserRequest) returns (UserStringResponse);
    rpc DeleteUser(UserRequest) returns (UserStringResponse);
    rpc UpdateUser(UserRequest) returns (UserStringResponse);
}
